5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1594_1805.log
== TEST (2019-03-20 23:07:10) 
-- CODE:
xA = int(input("coordenada xA"))
yA = int(input("coordenada yA"))
xB = int(input("coordenada xB"))
yB = int(input("coordenaa yB"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(round(xM,1)
print(round(yM,1))
-- ERROR:
File "XXXX", line 10
    print(round(yM,1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:07:23) 
-- CODE:
xA = int(input("coordenada xA"))
yA = int(input("coordenada yA"))
xB = int(input("coordenada xB"))
yB = int(input("coordenaa yB"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(round(xM,1))
print(round(yM,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:07:44) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenaa yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(round(xM,1))
print(round(yM,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:07:50) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenaa yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(round(xM,1))
print(round(yM,1))
-- EXECUTION TIME:
0.143304
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:08:31) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenaa yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1))
print(float(round(yM,1))
-- ERROR:
File "XXXX", line 10
    print(float(round(yM,1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:08:35) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenaa yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:09:36) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(int(round(xM,1)))
print(int(round(yM,1)))
-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:09:50) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:10:12) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- EXECUTION TIME:
0.131482
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 00:28:18) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- EXECUTION TIME:
0.141643
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:28:19) 
-- CODE:
xA = int(input("coordenada xA:"))
yA = int(input("coordenada yA:"))
xB = int(input("coordenada xB:"))
yB = int(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 00:28:52) 
-- CODE:
xA = float(input("coordenada xA:"))
yA = float(input("coordenada yA:"))
xB = float(input("coordenada xB:"))
yB = float(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 00:28:59) 
-- CODE:
xA = float(input("coordenada xA:"))
yA = float(input("coordenada yA:"))
xB = float(input("coordenada xB:"))
yB = float(input("coordenada yB:"))

xM = ((xB + xA)/2)
yM = ((yB + yA)/2)

print(float(round(xM,1)))
print(float(round(yM,1)))
-- EXECUTION TIME:
0.139125
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
